--- a/Tokyo Olympic Transformation.ipynb
+++ b/Tokyo Olympic Transformation.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "c76c1683-d905-4ae9-86f8-3729c50f213a",
+     "nuid": "e0b4783d-4256-414d-a720-1fcad00459c5",
      "showTitle": false,
      "title": ""
     }
@@ -31,7 +31,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "78d23d0b-1160-408a-8054-6c8dd40f052f",
+     "nuid": "dd526939-ead0-4f81-802c-eb03f6673020",
      "showTitle": false,
      "title": ""
     }
@@ -41,23 +41,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out[5]: True"
+      "Out[1]: True"
      ]
     }
    ],
    "source": [
+    "#Autenticacion de azure para conectarme al datalake\n",
     "configs = {\"fs.azure.account.auth.type\": \"OAuth\",\n",
     "\"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "\"fs.azure.account.oauth2.client.id\": \"\",\n",
-    "\"fs.azure.account.oauth2.client.secret\": '',\n",
-    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/tanent_id/oauth2/token\"}\n",
+    "\"fs.azure.account.oauth2.client.id\": \"poner aqui client id\",\n",
+    "\"fs.azure.account.oauth2.client.secret\": 'poner aqui secret key',\n",
+    "\"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/poner aqui tenant de la app/oauth2/token\"}\n",
     "\n",
-    "\n",
+    "#Mount es la conección al data lake\n",
     "dbutils.fs.mount(\n",
-    "source = \"abfss://tokyo-olympic-data@tokyoolympicdata.dfs.core.windows.net\", # contrainer@storageacc\n",
-    "mount_point = \"/mnt/tokyoolymic\",\n",
-    "extra_configs = configs)\n",
-    "  "
+    "source = \"abfss://tokyo-olympic-data@glmotokyo.dfs.core.windows.net\", # contrainer@storageacc\n",
+    "mount_point = \"/mnt/tokyoolymic\", #/mnt/NombreDelMount(Escogercualquiera)\n",
+    "extra_configs = configs)\n"
    ]
   },
   {
@@ -70,105 +70,38 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "e4102f61-4816-46d5-abf4-488b29cfa366",
+     "nuid": "977eca68-64a0-4563-beb6-e58413af3db0",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style scoped>\n",
-       "  .table-result-container {\n",
-       "    max-height: 300px;\n",
-       "    overflow: auto;\n",
-       "  }\n",
-       "  table, th, td {\n",
-       "    border: 1px solid black;\n",
-       "    border-collapse: collapse;\n",
-       "  }\n",
-       "  th, td {\n",
-       "    padding: 5px;\n",
-       "  }\n",
-       "  th {\n",
-       "    text-align: left;\n",
-       "  }\n",
-       "</style><div class='table-result-container'><table class='table-result'><thead style='background-color: white'><tr><th>path</th><th>name</th><th>size</th><th>modificationTime</th></tr></thead><tbody><tr><td>dbfs:/mnt/tokyoolymic/raw-data/</td><td>raw-data/</td><td>0</td><td>1691562179000</td></tr><tr><td>dbfs:/mnt/tokyoolymic/transformed-data/</td><td>transformed-data/</td><td>0</td><td>1691562189000</td></tr></tbody></table></div>"
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "addedWidgets": {},
-       "aggData": [],
-       "aggError": "",
-       "aggOverflow": false,
-       "aggSchema": [],
-       "aggSeriesLimitReached": false,
-       "aggType": "",
-       "arguments": {},
-       "columnCustomDisplayInfos": {},
-       "data": [
-        [
-         "dbfs:/mnt/tokyoolymic/raw-data/",
-         "raw-data/",
-         0,
-         1691562179000
-        ],
-        [
-         "dbfs:/mnt/tokyoolymic/transformed-data/",
-         "transformed-data/",
-         0,
-         1691562189000
-        ]
-       ],
-       "datasetInfos": [],
-       "dbfsResultPath": null,
-       "isJsonSchema": true,
-       "metadata": {
-        "isDbfsCommandResult": false
-       },
-       "overflow": false,
-       "plotOptions": {
-        "customPlotOptions": {},
-        "displayType": "table",
-        "pivotAggregation": null,
-        "pivotColumns": null,
-        "xColumns": null,
-        "yColumns": null
-       },
-       "removedWidgets": [],
-       "schema": [
-        {
-         "metadata": "{}",
-         "name": "path",
-         "type": "\"string\""
-        },
-        {
-         "metadata": "{}",
-         "name": "name",
-         "type": "\"string\""
-        },
-        {
-         "metadata": "{}",
-         "name": "size",
-         "type": "\"long\""
-        },
-        {
-         "metadata": "{}",
-         "name": "modificationTime",
-         "type": "\"long\""
-        }
-       ],
-       "type": "table"
-      }
-     },
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out[12]: [FileInfo(path='dbfs:/mnt/tokyoolymic/raw-data/', name='raw-data/', size=0, modificationTime=1725298904000),\n",
+      " FileInfo(path='dbfs:/mnt/tokyoolymic/transformed-data/', name='transformed-data/', size=0, modificationTime=1725298930000)]"
+     ]
     }
    ],
    "source": [
-    "%fs\n",
-    "ls \"/mnt/tokyoolymic\""
+    "#En Databricks, se puede usar un lenguaje llamado \"magic commands\" que comienzan con un porcentaje (%) y permiten realizar diversas operaciones, como listar archivos, leer datos, etc.\n",
+    "\n",
+    "#Desglose del Código:\n",
+    "#%fs:\n",
+    "\n",
+    "#Este es un \"magic command\" en Databricks que se utiliza para interactuar con el sistema de archivos. fs es una abreviatura de \"File System\".\n",
+    "#ls \"/mnt/tokyoolympic\":\n",
+    "\n",
+    "#El comando ls (list) se utiliza para listar los archivos y directorios dentro de un directorio específico en el sistema de archivos.\n",
+    "#\"/mnt/tokyoolympic\" es la ruta al directorio que se está listando.\n",
+    "\n",
+    "#solo fue una prueba, pero habia que darle acceso desde el IAM y darle el role de bob contributor a la app que creamos\n",
+    "\n",
+    "#Lista los archivos que podemos accesar\n",
+    "\n",
+    "dbutils.fs.ls(\"/mnt/tokyoolymic\")\n"
    ]
   },
   {
@@ -181,77 +114,21 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5e603a56-c274-4afd-8cbf-1d013b0c5d09",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - hive</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"/?o=2723700013584314#setting/sparkui/0809-071007-ueyejyn5/driver-8670347769851812044\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.3.2</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*, 4]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>Databricks Shell</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ]
-     },
-     "metadata": {
-      "application/vnd.databricks.v1+output": {
-       "addedWidgets": {},
-       "arguments": {},
-       "data": "\n            <div>\n                <p><b>SparkSession - hive</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"/?o=2723700013584314#setting/sparkui/0809-071007-ueyejyn5/driver-8670347769851812044\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.3.2</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*, 4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>Databricks Shell</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        ",
-       "datasetInfos": [],
-       "metadata": {},
-       "removedWidgets": [],
-       "textData": null,
-       "type": "htmlSandbox"
-      }
-     },
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "spark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "181fa770-c731-4991-946c-d3d5bc32400f",
+     "nuid": "681ca7dc-9c9e-4b5f-a05a-ec55496992c5",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "athletes = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolymic/raw-data/athletes.csv\")\n",
-    "coaches = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolymic/raw-data/coaches.csv\")\n",
-    "entriesgender = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolymic/raw-data/entriesgender.csv\")\n",
+    "#En databricks ya esta importado, pero en otro ambiente tendriamos que importar la libreria de spark y iniciar una sesion de spark dentro del codigo antes de poder aplicar las funciones para leer los documentos:\n",
+    "\n",
+    "#abrir el archivo de athletes usando la funcion de spark\n",
+    "#se agrego esta parte porque los titulos estaban en el row 1 \".option(\"header\",\"true\")\"\n",
+    "#se agrego .option(\"inferSchema\",\"true\") para que spark le ponga el tipo de dato correcto a las columnas\n",
+    "athletes = spark.read.format(\"csv\").option(\"header\",\"true\").load(\"/mnt/tokyoolymic/raw-data/athletes.csv\")\n",
+    "coaches = spark.read.format(\"csv\").option(\"header\",\"true\").load(\"/mnt/tokyoolymic/raw-data/coaches.csv\")\n",
+    "entriesgender = spark.read.format(\"csv\").option(\"header\",\"true\").load(\"/mnt/tokyoolymic/raw-data/entriesgender.csv\")\n",
     "medals = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolymic/raw-data/medals.csv\")\n",
     "teams = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"inferSchema\",\"true\").load(\"/mnt/tokyoolymic/raw-data/teams.csv\")"
    ]
@@ -266,7 +143,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ce0247a7-d206-47ec-994f-80ceedd06721",
+     "nuid": "b1b7b65a-8910-4010-9167-585ab09dc813",
      "showTitle": false,
      "title": ""
     }
@@ -319,7 +196,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d6e90e0a-cbce-4afb-8baf-857b3f47554d",
+     "nuid": "f282e22e-2384-4037-93e7-0fdf37e92f57",
      "showTitle": false,
      "title": ""
     }
@@ -351,7 +228,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "26fd4755-4eb4-4117-b4f5-33b396184b3c",
+     "nuid": "613b37dc-8d7b-46a8-b813-b7e6ad5751bd",
      "showTitle": false,
      "title": ""
     }
@@ -404,7 +281,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ab0d4dbf-2ade-43f5-b063-c61ea7098cc2",
+     "nuid": "38224ba9-1aa1-4ac5-8d95-bac73f781970",
      "showTitle": false,
      "title": ""
     }
@@ -437,7 +314,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "2f729fb9-3809-434c-9d4d-88eaefc68adb",
+     "nuid": "1d989529-2c4f-43e4-bf67-ef18e5eaa22d",
      "showTitle": false,
      "title": ""
     }
@@ -490,7 +367,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "85eb5e27-ae12-44ad-9a19-a52262f54da2",
+     "nuid": "7880a909-edc5-4e87-90b0-61caaffdc538",
      "showTitle": false,
      "title": ""
     }
@@ -510,6 +387,7 @@
     }
    ],
    "source": [
+    "#Imprimimos los schema de todos para ver que los tipos de datos estuvieran bien y aqui detectamos la primera necesidad de una transformación, la columna de Female, male y total estaban en string y deberian ser int.\n",
     "entriesgender.printSchema()"
    ]
   },
@@ -523,13 +401,18 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "f86a74cb-1bc3-439b-b7f3-594fb6ee48a7",
+     "nuid": "6248e9e5-530e-4d5b-85bd-552b2c5b8349",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
+    "#Primera transformacion\n",
+    "#- Convertimos las columnas de Female, male y total a int y para eso hasta arriba importamos la funcion de columna y la funcion de tipos de datos de spark\n",
+    "\n",
+    "# el \\ se usa en python para seguir escribiendo una linea de codigo en un salto de linea\n",
+    "\n",
     "entriesgender = entriesgender.withColumn(\"Female\",col(\"Female\").cast(IntegerType()))\\\n",
     "    .withColumn(\"Male\",col(\"Male\").cast(IntegerType()))\\\n",
     "    .withColumn(\"Total\",col(\"Total\").cast(IntegerType()))"
@@ -545,7 +428,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "33b83c1b-f99c-46da-ba2e-5971f86c66f1",
+     "nuid": "7aa6b38e-f3c5-4d27-8e41-f8363dc2f91b",
      "showTitle": false,
      "title": ""
     }
@@ -578,7 +461,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d2c66e87-314b-4ab2-9e8c-bbe6cf321f2d",
+     "nuid": "92f53902-9a71-4928-ae62-4d3bb924cca6",
      "showTitle": false,
      "title": ""
     }
@@ -589,7 +472,7 @@
      "output_type": "stream",
      "text": [
       "+----+--------------------+----+------+------+-----+-------------+\n",
-      "|Rank|        Team_Country|Gold|Silver|Bronze|Total|Rank by Total|\n",
+      "|Rank|         TeamCountry|Gold|Silver|Bronze|Total|Rank by Total|\n",
       "+----+--------------------+----+------+------+-----+-------------+\n",
       "|   1|United States of ...|  39|    41|    33|  113|            1|\n",
       "|   2|People's Republic...|  38|    32|    18|   88|            2|\n",
@@ -631,7 +514,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a4fcce57-31ed-4aa8-9499-633d5bb2a4c7",
+     "nuid": "d688792c-4ac5-440f-b547-236a8a64b12f",
      "showTitle": false,
      "title": ""
     }
@@ -643,7 +526,7 @@
      "text": [
       "root\n",
       " |-- Rank: integer (nullable = true)\n",
-      " |-- Team_Country: string (nullable = true)\n",
+      " |-- TeamCountry: string (nullable = true)\n",
       " |-- Gold: integer (nullable = true)\n",
       " |-- Silver: integer (nullable = true)\n",
       " |-- Bronze: integer (nullable = true)\n",
@@ -654,6 +537,7 @@
     }
    ],
    "source": [
+    "#Aqui tambien encontramos que las columnas de numeros estaban en string, como alternativa en lugar de usar la funcion column como en el ejemplo pasado, spark desde la importacion tiene la funcion option que analiza las columnas de csv y les pone el tipo de dato que considera. \n",
     "medals.printSchema()"
    ]
   },
@@ -667,7 +551,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d05e8089-77c5-424c-aeb9-6c659dc8d20a",
+     "nuid": "21440b23-0a1f-43cc-a5d6-fa19e723fb1c",
      "showTitle": false,
      "title": ""
     }
@@ -720,7 +604,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ffe5cb4c-cd58-4b1f-a4c5-66b41931d69a",
+     "nuid": "9412af46-cc7e-4fc4-9a8d-8dd452d265d2",
      "showTitle": false,
      "title": ""
     }
@@ -753,7 +637,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a1dbbc4d-457b-4db2-aa1e-65047ccc9247",
+     "nuid": "c18c3134-73b9-4102-ae4e-32395265f15f",
      "showTitle": false,
      "title": ""
     }
@@ -764,7 +648,7 @@
      "output_type": "stream",
      "text": [
       "+--------------------+----+\n",
-      "|        Team_Country|Gold|\n",
+      "|         TeamCountry|Gold|\n",
       "+--------------------+----+\n",
       "|United States of ...|  39|\n",
       "|People's Republic...|  38|\n",
@@ -794,7 +678,8 @@
    ],
    "source": [
     "# Find the top countries with the highest number of gold medals\n",
-    "top_gold_medal_countries = medals.orderBy(\"Gold\", ascending=False).select(\"Team_Country\",\"Gold\").show()"
+    "top_gold_medal_countries = medals.orderBy(\"Gold\", ascending=False).select(\"TeamCountry\",\"Gold\").show()\n",
+    "     "
    ]
   },
   {
@@ -807,7 +692,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "227067b1-3b5b-4a01-a3d1-5bf3f5972cd7",
+     "nuid": "eeaa11c1-9a38-4bca-9d35-4c068390e870",
      "showTitle": false,
      "title": ""
     }
@@ -866,62 +751,34 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "b2bda1f9-a0d7-46df-a895-b418522dc40d",
+     "nuid": "1c796bdc-16d8-4853-9ea1-0bc5c2899aa2",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "athletes.repartition(1).write.mode(\"overwrite\").option(\"header\",'true').csv(\"/mnt/tokyoolymic/transformed-data/athletes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c489a24b-05e4-47c3-a329-9d5e5e1d85b3",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "#cargamos los csv transformados al datalake de transformed data, pyspark los crea con carpetas, para subir solo el archivo primero los pasamos a un dataframde pandas:\n",
+    "#Son los que se llaman part000algo\n",
+    "athletes.repartition(1).write.mode(\"overwrite\").option(\"header\",'true').csv(\"/mnt/tokyoolymic/transformed-data/athletes\")\n",
     "coaches.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/coaches\")\n",
     "entriesgender.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/entriesgender\")\n",
     "medals.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/medals\")\n",
     "teams.repartition(1).write.mode(\"overwrite\").option(\"header\",\"true\").csv(\"/mnt/tokyoolymic/transformed-data/teams\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "bb18401a-d221-4421-9a8d-4d8c5cbdee29",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
    "dashboards": [],
+   "environmentMetadata": {
+    "base_environment": "",
+    "client": "1"
+   },
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 1201695797254400,
+     "commandId": -1,
      "dataframes": [
       "_sqldf"
      ]
